--- a/C++/.vscode/settings.json
+++ b/C++/.vscode/settings.json
@@ -52,6 +52,9 @@
         "unordered_map": "cpp",
         "variant": "cpp",
         "vector": "cpp",
-        "algorithm": "cpp"
+        "algorithm": "cpp",
+        "__availability": "cpp",
+        "functional": "cpp",
+        "memory": "cpp"
     }
 }
